--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,22 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.enabled=true
+jwt.secret=qV+W4J6IoF+wq9fT8nKzXWpqZk3Y79Y2OeR9Yk0JH9U=
+jwt.expiration=86400000
+
+
+
+#email
+spring.mail.host=smtp.yandex.ru
+#spring.mail.port=465
+spring.mail.protocol=smtp
+spring.mail.username=pr0gramm@yandex.ru
+spring.mail.password=bjasvsuqklowiyer
+spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.ssl.enable=true
+
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#spring.mail.port=465
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
