Добавлены энд поинты для существующих ролей(USER, ADMIN) Реализованы механики взаимодействия админа с ролями и пользователями Смена пароля не работает

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.liquibase.enabled=true
 jwt.secret=qV+W4J6IoF+wq9fT8nKzXWpqZk3Y79Y2OeR9Yk0JH9U=
 jwt.expiration=86400000
 
+#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.beans.factory.support=DEBUG
 
 
 #email
