--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=demo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/tool_tracking
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=${DB_PASSWORD}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
@@ -12,20 +14,18 @@ jwt.secret=qV+W4J6IoF+wq9fT8nKzXWpqZk3Y79Y2OeR9Yk0JH9U=
 jwt.expiration=86400000
 
 #logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.beans.factory.support=DEBUG
+#logging.level.org.springframework.beans.factory.support=DEBUG
 
 
 #email
 spring.mail.host=smtp.yandex.ru
-#spring.mail.port=465
 spring.mail.protocol=smtp
-spring.mail.username=pr0gramm@yandex.ru
-spring.mail.password=bjasvsuqklowiyer
-spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.ssl.enable=true
-
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-#spring.mail.port=465
-#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.username=pr0gramm@yandex.ru
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+
+
+
