добавлено создание шаблонов и предметов простые запросы на создание, изменение, удаление, поиск. Шаблоны и предметы хранятся в базе данных в формате jsnob

--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,15 @@
                 <artifactId>janino</artifactId>
                 <version>3.1.11</version>
             </dependency>
-        </dependencies>
+
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-60</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+
+
+    </dependencies>
 
 
     <build>
