--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=demo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/tool_tracking
+
 spring.datasource.username=postgres
 spring.datasource.password=${DB_PASSWORD}
-
+spring.liquibase.default-schema=public
 spring.datasource.driver-class-name=org.postgresql.Driver
+debug=true
 
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
